# getopt

./: CMakeLists.txt  LICENSE  README.md
include/: getopt.h
src/: getopt.cpp
test/: CMakeLists.txt  main.cpp
